--- a/Rcgnzr.Storage.Web/Rcgnzr.Storage.Web.csproj
+++ b/Rcgnzr.Storage.Web/Rcgnzr.Storage.Web.csproj
@@ -2,11 +2,17 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="FluentValidation.AspNetCore" Version="9.2.0" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Rcgnzr.Storage.Logic\Rcgnzr.Storage.Logic.csproj" />
     </ItemGroup>
 
 </Project>
