--- a/Rcgnzr.Cabinet.Web/appsettings.json
+++ b/Rcgnzr.Cabinet.Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Storage": "http://localhost:3000"
+    "Storage": "http://localhost:3000",
+    "Database": "Server=localhost;Database=rcgnzr;Uid=root;Pwd=p@ssw0rd123;"
   },
   "Logging": {
     "LogLevel": {
