--- a/Rcgnzr.Cabinet.Web/Rcgnzr.Cabinet.Web.csproj
+++ b/Rcgnzr.Cabinet.Web/Rcgnzr.Cabinet.Web.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="FluentValidation.AspNetCore" Version="9.2.0" />
         <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+        <PackageReference Include="MySql.Data" Version="8.0.22" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
         <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.4" />
     </ItemGroup>
@@ -21,7 +22,11 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Controllers" />
+      <ProjectReference Include="..\Rcgnzr.Cabinet.Model\Rcgnzr.Cabinet.Model.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Handlers" />
     </ItemGroup>
 
     <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
