--- a/Rcgnzr.Cabinet.Web/client/package.json
+++ b/Rcgnzr.Cabinet.Web/client/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.19.3",
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
+    "nan": "^2.14.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
